Exercise/Doctor House/style.css
.body{
     font-family: Source Sans 3; overflow-x: hidden;
}
/* Header Hero */
.header{
    background: rgba(7, 51, 47, 1);
}
.header-index{
    background-image: url("../doctor house/img/Vector.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: left top;
    background-size: 259px 259px !important;
    min-height: 239px;

}
.content-header{
    height: 800px;
}
.content h1{
font-family: Source Sans 3;
font-weight: 600;
font-size: 75px;
line-height: 90px;
letter-spacing: 0%;

}
.content  p{ 
font-weight: 600;
font-style: SemiBold;
font-size: 18px;
line-height: 100%;
letter-spacing: 0%;
color: (243, 243, 243, 1);
}
.content-image{
    position: relative;
    min-height: 119px;
}

.content-image::before{
    content: "";
    position: absolute;
    top: 120px;
    left: 460px;
    width: 259px;
    height: 259px;
    transform: rotate(20deg);
    background: url("../doctor house/img/Group 7.png") no-repeat;
    background-size: 259px 259px;
    z-index: 999;
    pointer-events: none;
}
 .content-image{
    background-image: url("../doctor house/img/Group\ 6.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
     background-position: 605px 580px;
    background-size: 66px 145px !important;
  
} 
/* Nav Bar */
.navbar{
    background: transparent;
}
.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active {
    outline: none !important;
    box-shadow: none !important;
    border: none;
}
.navbar.scrolled{
    background-color: #07332F;
}

.drop{
    background: transparent;
    border: none;

}
.dropdown-menu {
    background: #fff !important;
    border-radius: 0 !important;
    padding: 0px !important;
    margin: 0px !important;
    transition: all .10s ease;  
}
.dropdown-item {
    font-weight: 700;
    padding: 14px 20px;
    transition: all .4s ease;
}
.dropdown-menu li{
    border-bottom:1px solid rgba(230, 230, 230, 1);
}

.dropdown-menu li:last-child{
    border-bottom: none;
}
.dropdown:hover .dropdown-menu {
    transform: translateY(10px) !important;   
}
.dropdown-item:hover,
.dropdown-item:focus {
    background: rgba(247, 165, 130, 1);
    color: #fff;
    padding-left: 40px;
}
.navbar-toggler {
     background:rgba(247,165,130,1);
    border-radius:8px;
    padding:8px 10px;
}
.nav-item a,.drop{
    font-size: 18px;  
    font-weight: 600;
    font-style: SemiBold;
    font-size: 18px;

    line-height: 100%;
    letter-spacing: 0%;


}
/* Navbar Links */
.navbar-nav .nav-link{
    position: relative;
    display: inline-block;
    color: #fff !important;
    font-weight: 600;
    transition: color .3s ease;
    background: transparent !important;
    
}
/* Underline */
.navbar-nav .nav-link::after{
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    width: 0;
    height: 2px;
    background: rgba(247, 165, 130, 1);
    transition: width .35s ease;
}
.navbar-nav .nav-link:hover::after{
    width: 100%;
}
/* Active Link */
.navbar-nav .nav-link.active{
    color: rgba(247, 165, 130, 1) !important;
    background: transparent !important;
    border: none !important;
}

.navbar-nav .nav-link.active::after{
    width: 100%;
     border: none !important;
     background-color:  transparent;
}

/* Remove Bootstrap focus styles */
.navbar-nav .nav-link:focus{
    color: rgba(247, 165, 130, 1) !important;
    box-shadow: none;
}
.btn-services{
    color: rgba(247, 165, 130, 1);
    border:2px solid rgba(247, 165, 130, 1); 
}
.btn-services:hover{
    background-color:rgba(247, 165, 130, 1); 
    color: #ffff;
}
.card-info-body p{

    font-weight: 400;
    font-size: 20px;
    line-height: 1.6;
    letter-spacing: 0%;
    color: rgba(255, 255, 255, 1);

}
.section-patients-says-body h1,.section-expert-doctor h1{
    font-family: Source Sans 3;
    font-size: 40px;     
}
.project-img img{
    width: 66px;
    height: 66px;
    object-fit: cover;
    border: 1px solid rgba(247, 165, 130, 1);
    

}
.quote-img{
    width: 54px;
    height: 42px;
}

.custom-placeholder::placeholder,.custom-placeholder {
    color: #ffffff !important;
   
}
/* Splide */
.splide__arrow { 
    opacity: 1;
    width: 50px;
    height: 50px;
}
.splide__arrow--prev svg {
    fill:  rgba(247, 165, 130, 1); 
}
.splide__arrow--next svg {
    fill:  rgba(247, 165, 130, 1); 
}
.splide__arrow--prev {
    left: -18px;
    background-color: white;
    border: 1px solid rgba(247, 165, 130, 1);
}

.splide__arrow--next {
    right: -18px;
     background-color: white;
    border: 1px solid rgba(247, 165, 130, 1);
}
.splide__arrow--next:hover,
.splide__arrow--prev:hover {
     background-color:  rgba(247, 165, 130, 1); 
}
.splide__arrow--next:hover svg,
.splide__arrow--prev:hover svg {
    fill: #fff;
}

/* Our Expert Doctors */
.doctor-view-btn{
    color: rgba(247, 165, 130, 1); 
    border: 2px solid rgba(247, 165, 130, 1); 
    font-size:20px;
}
.doctor-view-btn:hover{
    background-color: rgba(247, 165, 130, 1); 
    color: #ffff;
}

/* Footer */
.footer-btn{
     border:2px solid  rgba(247, 165, 130, 1); 
     color: rgba(247, 165, 130, 1);
}
.footer-btn:hover{
    background-color:rgba(247, 165, 130, 1);
    color: #ffff;
}


/* Doctor Page */
.doctor-header{
    margin-top: 100px;
}
.img-service{
    width: 100px;
    height: 100px;
    background-color: rgba(255, 65, 85, 0.1);
     padding: 20px;
    
}

.img-service img{
    width: 60px;
    height: 60px;
    align-items: center;
    display: block;
   
}

/* file */
   .upload-box{
            border:2px dashed #d9d9d9;
            border-radius:8px;
            height:140px;
            cursor:pointer;
            transition:.3s;
        }

        .upload-box:hover{
            border-color:#0d6efd;
            background:#f8f9fa;
        }

        .upload-box i{
            font-size:38px;
            color:#999;
        }

        .upload-box p{
            color:#999;
            font-size:18px;
            margin-bottom:10px;
        }

        input[type="file"]{
            display:none;
        }

        /* Login Page */
        
.left-side{
    background: rgba(7, 51, 47, 1);
    min-height: 100vh;
    overflow: hidden;
    position: relative;
}

.main-img{
    max-width: 75%;
    height: auto;
    z-index: 2;
}
@media (max-width:992px){
    .custom-nav .navbar-collapse{
        background: rgba(7, 51, 47, 0.95);
        border-bottom: 2px solid rgba(255,255,255,0.2);
        padding-bottom: 15px;
    }
    .navbar{
    background-color: #07332F;
}
    .header{
    background: rgba(7, 51, 47, 1);
    background-image: none;
       background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
     background-position: left top;
    background-size: 20% 79px;
    min-height: 75px;

   

    .content-image{
        background-size: 35px 75px !important;
        background-position: right 15px bottom 20px;
    }

    .content-image::before{
        width: 150px;
        height: 130px;
        background-size: 150px 130px;

        top: 80px;
        left: auto;
        right: 0px;

        transform: rotate(8deg);
    }
}
    .content-image{
        background-image: none;
    }
    .content h1{
        margin-top: 100px;
        line-height: 1.6;
        font-weight: 600;
        font-size: 30px;
        letter-spacing: 0%;
        text-align: center;

    }
    .content p{      
    font-weight: 400;
    font-size: 14px;
    line-height: 1.6;
    letter-spacing: 0%;
    text-align: center;

}
    .content-header{
    height: 375px;
}

    .content-header img{
     width: 335px;
     height: 240px;

    }
  
    .corner-img{
        width: 230px;
        top: 10px;
        right: 10px;
    }
    .splide__arrow {
   
    opacity: 1;
    width: 30px;
    height: 30px;
}
.splide__arrow--prev svg {
    fill:  rgba(247, 165, 130, 1); 
}
.splide__arrow--next svg {
    fill:  #ffff; 
}
.splide__arrow--prev {
    left: -10px;
    background-color: white;
    border: 1px solid rgba(247, 165, 130, 1);
}

.splide__arrow--next {
    right: -10px;
     background: rgba(247, 165, 130, 1);
}

    
}

